packages/kyvernoPolicies/chart/tests/vpol/restrict-host-path-mount-pv-cel/kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-host-path-mount-pv-cel
policies:
  - ../policy.yaml
resources:
  - resource.yaml
results:
  - isValidatingPolicy: true
    kind: PersistentVolume
    policy: restrict-host-path-mount-pv-cel
    resources:
      - bad-disallowed-hostpath
    result: fail
  - isValidatingPolicy: true
    kind: PersistentVolume
    policy: restrict-host-path-mount-pv-cel
    resources:
      - good-allowed-hostpath
      - good-wildcard-hostpath
      - good-without-hostpath
    result: pass
